2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 466149 - Code completion
	activates inside a string.'.

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Added global keyword. Fixing 'Bug 466063 - Missing keyword
	'global' from code completion'.

2009-01-13  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/MemberCompletionData.cs:
	* Gui/CSharpTextEditorCompletion.cs: Performance optimizations in
	AddCompletionData. Reduce calls to Ambience.GetString.

	* Gui/CSharpAmbience.cs: Optimizations. In Visit(IType), avoid creating
	a StringBuilder when the result is just the class name.

2009-01-09  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs: Track api changes.

2009-01-09  Mike Krüger  <mkrueger@novell.com>

	* Parser/CodeGenerator.cs:
	* Gui/NRefactoryResolver.cs:
	* Parser/NRefactoryParser.cs:
	* Parser/FindMemberAstVisitor.cs: Worked on refactoring code/fixing Bug
	456576 - refactor: rename field is not working.

2009-01-08  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Fix warning.

	* md1format.xml:
	* Project/CSharpCompilerParameters.cs: Store the LangVersion string
	using the msbuild format. For MD1, use the old format. Fixes bug
	#461104 - Setting C# language version on project does not parse in
	VS.Net 2008.

2009-01-07  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: Worked on on the fly type resolving.

2009-01-07  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs: fixed "Bug 463783 - Method Navigator does not
	show indexer parameters".

2009-01-06  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: Corrected variable scope.

2009-01-06  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed 'Bug 457237 - code completion doesn't
	show static methods when setting global variable'.
